--- a/training_pipeline/nbs/poc-integrate-mlflow.ipynb
+++ b/training_pipeline/nbs/poc-integrate-mlflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "37ce069d-6d13-4e6a-a36f-fa5bb7c33696",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tungdao/tung/mlopsvn/code/mlops-crash-course-code/training_pipeline/nbs\n"
+      "/home/duy/mlops-crash-course/mlops-crash-course-code/training_pipeline/nbs\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fafa4c79-80e0-4af1-a4fc-39deab786ba5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "60f2c94c-0547-420f-862a-f1e067b9ca64",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "66d91fde-2455-4530-b114-3692fcd1231a",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "[1807 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9d6d3cf6-2986-4ade-a150-48fde08e0dda",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "9  2021-04-19 20:29:28+00:00       1004               1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "59756fe5-cd66-4a11-b0d1-28c3a44b3309",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        "9 2021-04-19 20:29:28+00:00       1004               1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "13b90970",
    "metadata": {},
    "outputs": [
@@ -682,7 +682,7 @@
        "9 2021-07-28 11:08:04.802 2021-04-19 20:29:28+00:00               1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "18d465f2-30f2-4438-a485-c69f332a2404",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
        "9   0.094609  0.151163              166               1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bfcd0158-b35c-489f-951d-0106c1956d54",
    "metadata": {},
    "outputs": [],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e86c2826-5151-4da3-8641-b9d471a2ac28",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
        "((8, 3), (8, 1), (2, 3), (2, 1))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8bb21ef0",
    "metadata": {},
    "outputs": [],
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "3940ac52",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('http://localhost:5000', 'mlflow-artifacts:/1/6c19bd6594594f1a88d0a5ab30076f58/artifacts')\n"
+      "('http://localhost:5000', 'mlflow-artifacts:/1/11f106120ce54fd483876514f93172de/artifacts')\n"
      ]
     }
    ],
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "ae4abca5-4985-49cd-916b-fb6efae63d55",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022/10/16 22:42:20 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/tungdao/miniconda3/envs/mlopsvn-training/lib/python3.9/site-packages/mlflow/models/signature.py:129: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n"
+      "2024/10/23 17:43:48 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/duy/miniconda3/envs/data_pipeline/lib/python3.9/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/10/23 17:43:51 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/duy/miniconda3/envs/data_pipeline/lib/python3.9/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\"\n",
+      "2024/10/23 17:43:59 WARNING mlflow.utils.autologging_utils: Encountered unexpected error during sklearn autologging: The following failures occurred while performing one or more logging operations: [MlflowException('Failed to perform one or more operations on the run with ID 11f106120ce54fd483876514f93172de. Failed operations: [MlflowException(\"API request to endpoint /api/2.0/mlflow/runs/log-inputs failed with error code 404 != 200. Response body: \\'<!doctype html>\\\\n<html lang=en>\\\\n<title>404 Not Found</title>\\\\n<h1>Not Found</h1>\\\\n<p>The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.</p>\\\\n\\'\")]')]\n"
      ]
     },
     {
@@ -1017,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "cae90676",
    "metadata": {},
    "outputs": [
@@ -1025,27 +1033,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tungdao/miniconda3/envs/mlopsvn-training/lib/python3.9/site-packages/mlflow/models/signature.py:129: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
-      "  inputs = _infer_schema(model_input)\n"
+      "/home/duy/miniconda3/envs/data_pipeline/lib/python3.9/site-packages/mlflow/types/utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "2024/10/23 17:44:04 INFO mlflow.tracking._tracking_service.client: 🏃 View run  at: http://localhost:5000/#/experiments/1/runs/11f106120ce54fd483876514f93172de.\n",
+      "2024/10/23 17:44:04 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://localhost:5000/#/experiments/1.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logged data and model in run 6c19bd6594594f1a88d0a5ab30076f58\n",
+      "Logged data and model in run 11f106120ce54fd483876514f93172de\n",
       "\n",
       "---------- logged params ----------\n",
-      "{'alpha': '0.5', 'copy_X': 'True', 'fit_intercept': 'True', 'l1_ratio': '0.1', 'max_iter': '1000', 'normalize': 'deprecated', 'positive': 'False', 'precompute': 'False', 'random_state': '17', 'selection': 'cyclic', 'tol': '0.0001', 'warm_start': 'False', 'features': \"['conv_rate', 'acc_rate', 'avg_daily_trips']\"}\n",
+      "{'alpha': '0.5', 'copy_X': 'True', 'fit_intercept': 'True', 'l1_ratio': '0.1', 'max_iter': '1000', 'positive': 'False', 'precompute': 'False', 'random_state': '17', 'selection': 'cyclic', 'tol': '0.0001', 'warm_start': 'False', 'features': \"['conv_rate', 'acc_rate', 'avg_daily_trips']\"}\n",
       "\n",
       "---------- logged metrics ----------\n",
-      "{'training_mse': 0.020391301867212934, 'training_mae': 0.1339089111891788, 'training_r2_score': 0.9184347925311482, 'training_rmse': 0.14279811576912677, 'training_score': 0.9184347925311482, 'testing_rmse': 0.11625695183915705, 'testing_r2': 0.0, 'testing_mae': 0.10880469049979313}\n",
+      "{'training_mean_squared_error': 0.020391301867212934, 'training_mean_absolute_error': 0.1339089111891788, 'training_r2_score': 0.9184347925311482, 'training_root_mean_squared_error': 0.14279811576912677, 'training_score': 0.9184347925311482, 'testing_rmse': 0.11625695183915705, 'testing_r2': 0.0, 'testing_mae': 0.10880469049979313}\n",
       "\n",
       "---------- logged tags ----------\n",
       "{'estimator_name': 'ElasticNet', 'estimator_class': 'sklearn.linear_model._coordinate_descent.ElasticNet'}\n",
       "\n",
       "---------- logged artifacts ----------\n",
-      "['model/MLmodel', 'model/conda.yaml', 'model/model.pkl', 'model/python_env.yaml', 'model/requirements.txt']\n"
+      "['estimator.html', 'model/MLmodel', 'model/conda.yaml', 'model/model.pkl', 'model/python_env.yaml', 'model/requirements.txt']\n"
      ]
     }
    ],
@@ -1085,20 +1095,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "72c934ab",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/duy/miniconda3/envs/data_pipeline/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading artifacts: 100%|██████████| 5/5 [00:00<00:00, 1466.64it/s]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "mlflow.pyfunc.loaded_model:\n",
        "  artifact_path: model\n",
        "  flavor: mlflow.sklearn\n",
-       "  run_id: 6c19bd6594594f1a88d0a5ab30076f58"
+       "  run_id: 11f106120ce54fd483876514f93172de"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "f369c951",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1139,7 @@
        "array([ 0.14975854, -0.06785084])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('mlopsvn-training')",
+   "display_name": "data_pipeline",
    "language": "python",
    "name": "python3"
   },
@@ -1155,12 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c7524311667e2929f44f6dc9d43abac6ab6cd498d683860edbda9998f185c70d"
-   }
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
