--- a/training_pipeline/nbs/poc-training-code.ipynb
+++ b/training_pipeline/nbs/poc-training-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "37ce069d-6d13-4e6a-a36f-fa5bb7c33696",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "fafa4c79-80e0-4af1-a4fc-39deab786ba5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "60f2c94c-0547-420f-862a-f1e067b9ca64",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "66d91fde-2455-4530-b114-3692fcd1231a",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "[1807 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9d6d3cf6-2986-4ade-a150-48fde08e0dda",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "9  2021-04-19 20:29:28+00:00       1004               1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "59756fe5-cd66-4a11-b0d1-28c3a44b3309",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        "9 2021-04-19 20:29:28+00:00       1004               1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b2a01fb6-a721-43be-b441-c788432a2b42",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "30e871f4-e605-4858-a0c5-d4e9464f9f53",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "13b90970",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
        "9 2021-07-28 11:08:04.802 2021-04-19 20:29:28+00:00               1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "18d465f2-30f2-4438-a485-c69f332a2404",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
        "9   0.094609  0.151163              166               1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bfcd0158-b35c-489f-951d-0106c1956d54",
    "metadata": {},
    "outputs": [],
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "e86c2826-5151-4da3-8641-b9d471a2ac28",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
        "((8, 3), (8, 1), (2, 3), (2, 1))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "ae4abca5-4985-49cd-916b-fb6efae63d55",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "234e7bfd-0c84-4160-ad4c-69272021664e",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        "['model/driver_model.bin']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "72c934ab",
    "metadata": {},
    "outputs": [
@@ -1468,7 +1468,7 @@
        "ElasticNet(alpha=0.5, l1_ratio=0.1, random_state=17)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "f369c951",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1490,7 @@
        "array([ 0.14975854, -0.06785084])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,11 +1502,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "98e1073a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   conv_rate  acc_rate  avg_daily_trips\n",
+      "5   0.736727  0.936667              939\n",
+      "3   0.175219  0.761434              385\n",
+      "4   0.312347  0.481786              810\n",
+      "0   0.175219  0.761434              385\n",
+      "9   0.094609  0.151163              166\n",
+      "8   0.736727  0.936667              939\n",
+      "6   0.175219  0.761434              385\n",
+      "1   0.312347  0.481786              810\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.06785084,  0.86668868,  0.14975854,  0.86668868,  1.23611856,\n",
+       "       -0.06785084,  0.86668868,  0.14975854])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(train_x)\n",
+    "predictions = loaded_model.predict(train_x)\n",
+    "predictions"
+   ]
   }
  ],
  "metadata": {
